# axdot

./: Cargo.toml  Makefile.toml  README.md  commitlint.config.js  default.nix  flake.nix  shell.nix
.github/: dependabot.yaml
.github/workflows/: build.yaml  lints.yaml  nix.yaml  rust.yaml  tokei.yaml
completions/bash-completion/completions/: axdot
completions/fish/completions/: axdot.fish
completions/zsh/site-functions/: _axdot
dev-support/containers/: docker-bake.hcl
dev-support/containers/alpine/: Containerfile
dev-support/containers/debian/: Dockerfile
dev-support/containers/distroless/: Containerfile
dev-support/containers/scratch/: Dockerfile
dev-support/lib/: toolchain
devshell/: default.nix  package.nix
src/: command.rs  config.rs  context.rs  error.rs  main.rs  manager.rs
