[package]
name = "axdot"
version = "0.1.0"
authors = ["user <user@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
fs_extra = "1"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
structopt = "0.3"
