[package]
name = "axdot"
version = "0.2.0"
authors = ["xrelkd 46590321+xrelkd@users.noreply.github.com"]
edition = "2021"

[dependencies]
fs_extra = "1"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

clap = { version = "3", features = ["derive", "env"] }
clap_complete = "3"
snafu = "0.7"

