[package]
name        = "axdot"
version     = "0.3.0"
authors     = ["xrelkd 46590321+xrelkd@users.noreply.github.com"]
edition     = "2021"
license     = "GPL-3.0"
repository  = "https://github.com/xrelkd/axdot"
description = "Axdot"
keywords    = ["dotfiles"]
categories  = ["accessibility"]
readme      = "README.md"

[dependencies]
fs_extra = "1"

serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
snafu         = "0.8"
